@@ -1,0 +1,16 @@
+Translating NFO Viewer
+======================
+
+To avoid doing pointless work, first check the latest list of existing
+translations at the subversion trunk
+
+    http://svn.gna.org/viewcvs/nfoview/trunk/po/
+
+To try your translation in the source directory, you can compile it
+to the "locale" directory (which does not exist by default)
+
+    mkdir -p locale/XX/LC_MESSAGES
+    msgfmt -cv po/XX.po -o locale/XX/LC_MESSAGES/nfoview.mo
+    bin/nfoview
+
+When done, send your translation by email to <otsaloma@cc.hut.fi>.
